--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
   "files.associations": {
     "*.tsx": "typescriptreact",
     "iostream": "cpp",
-    "vector": "cpp"
+    "vector": "cpp",
+    "ostream": "cpp",
+    "cmath": "cpp"
   }
 }
